--- a/SimpleWeather.Windows/Preferences/DevSettingsPage.xaml
+++ b/SimpleWeather.Windows/Preferences/DevSettingsPage.xaml
@@ -7,6 +7,8 @@
     xmlns:helpers="using:SimpleWeather.NET.Helpers"
     xmlns:local="using:SimpleWeather.NET.Preferences"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mtuc="using:CommunityToolkit.WinUI.Controls"
+    xmlns:mtui="using:CommunityToolkit.WinUI"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:stor="using:Windows.Storage"
     xmlns:weather="using:SimpleWeather.WeatherData"
@@ -27,41 +29,29 @@
             HorizontalScrollMode="Disabled"
             VerticalScrollBarVisibility="Auto"
             VerticalScrollMode="Auto">
-            <StackPanel>
-                <TextBlock Style="{StaticResource SettingTitleStyle}" Text="Developer Settings" />
-                <TextBlock
-                    FontSize="16"
-                    Style="{StaticResource SettingTitleStyle}"
-                    Text="API Keys" />
-                <Rectangle
-                    Height="1"
-                    Margin="0,-4,0,15"
-                    Fill="LightGray" />
-                <StackPanel Padding="0,0,0,8">
-                    <TextBlock Style="{StaticResource PrefTitleStyle}" Text="AccuWeather Key" />
-                    <controls:DevKeyEntry API="{x:Bind weather:WeatherAPI.AccuWeather, Mode=OneTime}" />
+            <Grid>
+                <StackPanel
+                    MaxWidth="1280"
+                    Margin="0,0,0,16"
+                    HorizontalAlignment="Stretch"
+                    Spacing="4">
+                    <TextBlock Style="{StaticResource SettingsSectionHeaderTextBlockStyle}" Text="API Keys" />
+                    <mtuc:SettingsCard Header="AccuWeather Key">
+                        <controls:DevKeyEntry API="{x:Bind weather:WeatherAPI.AccuWeather, Mode=OneTime}" />
+                    </mtuc:SettingsCard>
+                    <mtuc:SettingsCard Header="Tomorrow.io Key">
+                        <controls:DevKeyEntry API="{x:Bind weather:WeatherAPI.TomorrowIo, Mode=OneTime}" />
+                    </mtuc:SettingsCard>
+
+                    <TextBlock Style="{StaticResource SettingsSectionHeaderTextBlockStyle}" Text="Misc" />
+                    <mtuc:SettingsCard Header="Enable Debug Logger">
+                        <ToggleSwitch x:Name="DebugSwitch" />
+                    </mtuc:SettingsCard>
+                    <mtuc:SettingsCard HorizontalContentAlignment="Left" ContentAlignment="Left">
+                        <Button x:Name="SaveLogsBtn" Content="Save Logs" />
+                    </mtuc:SettingsCard>
                 </StackPanel>
-                <StackPanel Padding="0,8">
-                    <TextBlock Style="{StaticResource PrefTitleStyle}" Text="Tomorrow.io Key" />
-                    <controls:DevKeyEntry API="{x:Bind weather:WeatherAPI.TomorrowIo, Mode=OneTime}" />
-                </StackPanel>
-                <Rectangle Height="8" Fill="Transparent" />
-                <TextBlock
-                    FontSize="16"
-                    Style="{StaticResource SettingTitleStyle}"
-                    Text="Misc" />
-                <Rectangle
-                    Height="1"
-                    Margin="0,-4,0,15"
-                    Fill="LightGray" />
-                <StackPanel Padding="0,8">
-                    <TextBlock Style="{StaticResource PrefTitleStyle}" Text="Enable Debug Logger" />
-                    <ToggleSwitch x:Name="DebugSwitch" />
-                </StackPanel>
-                <StackPanel Padding="0,8">
-                    <Button x:Name="SaveLogsBtn" Content="Save Logs" />
-                </StackPanel>
-            </StackPanel>
+            </Grid>
         </ScrollViewer>
     </Grid>
 </Page>
