--- a/SimpleWeather.Windows/Preferences/IconRadioPreference.xaml
+++ b/SimpleWeather.Windows/Preferences/IconRadioPreference.xaml
@@ -7,37 +7,41 @@
     xmlns:helpers="using:SimpleWeather.NET.Helpers"
     xmlns:local="using:SimpleWeather.NET.Preferences"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mtuc="using:CommunityToolkit.WinUI.Controls"
+    xmlns:mtui="using:CommunityToolkit.WinUI"
     d:DesignHeight="300"
     d:DesignWidth="400"
     Tapped="UserControl_Tapped"
     mc:Ignorable="d">
 
-    <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
-        <RadioButton
-            x:Name="PreferenceRadioButton"
-            MinWidth="35"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Center"
-            HorizontalContentAlignment="Left"
-            VerticalContentAlignment="Center"
-            Checked="PreferenceRadioButton_Checked" />
-        <StackPanel>
-            <TextBlock
-                x:Name="IconPreference"
-                Padding="5"
-                d:Text="Weather Icon Provider"
-                FontSize="16" />
-            <StackPanel x:Name="IconContainer" Orientation="Horizontal">
-                <controls:IconControl WeatherIcon="&#xf00d;" />
+    <mtuc:SettingsCard HorizontalContentAlignment="Left" ContentAlignment="Left">
+        <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
+            <RadioButton
+                x:Name="PreferenceRadioButton"
+                MinWidth="35"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Left"
+                VerticalContentAlignment="Center"
+                Checked="PreferenceRadioButton_Checked" />
+            <StackPanel>
+                <TextBlock
+                    x:Name="IconPreference"
+                    Padding="5"
+                    d:Text="Weather Icon Provider"
+                    FontSize="16" />
+                <StackPanel x:Name="IconContainer" Orientation="Horizontal">
+                    <controls:IconControl WeatherIcon="&#xf00d;" />
+                </StackPanel>
             </StackPanel>
+            <SymbolIcon
+                Width="24"
+                Height="24"
+                Margin="16,0,0,4"
+                VerticalAlignment="Bottom"
+                Foreground="Gold"
+                Symbol="SolidStar"
+                Visibility="{x:Bind IsPremiumIcon, Converter={StaticResource booleanToVisibilityConverter}}" />
         </StackPanel>
-        <SymbolIcon
-            Width="24"
-            Height="24"
-            Margin="16,0,0,4"
-            VerticalAlignment="Bottom"
-            Foreground="Gold"
-            Symbol="SolidStar"
-            Visibility="{x:Bind IsPremiumIcon, Converter={StaticResource booleanToVisibilityConverter}}" />
-    </StackPanel>
+    </mtuc:SettingsCard>
 </UserControl>
