--- a/SimpleWeather.Windows/Preferences/Settings_Icons.xaml
+++ b/SimpleWeather.Windows/Preferences/Settings_Icons.xaml
@@ -20,16 +20,16 @@
             HorizontalScrollMode="Disabled"
             VerticalScrollBarVisibility="Auto"
             VerticalScrollMode="Auto">
-            <StackPanel>
-                <ContentPresenter d:Content="Icons" Content="{helpers:StringRes Name='pref_title_icons'}">
-                    <ContentPresenter.ContentTemplate>
-                        <DataTemplate>
-                            <TextBlock Style="{ThemeResource SettingTitleStyle}" Text="{Binding}" />
-                        </DataTemplate>
-                    </ContentPresenter.ContentTemplate>
-                </ContentPresenter>
-                <StackPanel x:Name="IconRadioContainer" Orientation="Vertical" />
-            </StackPanel>
+            <Grid>
+                <StackPanel
+                    MaxWidth="1280"
+                    Margin="0,0,0,16"
+                    HorizontalAlignment="Stretch"
+                    Spacing="4">
+                    <TextBlock Style="{StaticResource SettingsSectionHeaderTextBlockStyle}" Text="{helpers:StringRes Name='pref_title_icons'}" />
+                    <StackPanel x:Name="IconRadioContainer" Orientation="Vertical" />
+                </StackPanel>
+            </Grid>
         </ScrollViewer>
     </Grid>
 </Page>
